Fix the flickering effect when hovering a cell

--- a/issue_tracking/record/static/custom.css
+++ b/issue_tracking/record/static/custom.css
@@ -1,9 +1,6 @@
 #datepicker {
     background-color: white;
 }
-div.tooltip {
-    word-wrap: break-word;
-}
 .lockscreen {
     background-image: url('/static/img/bg.jpg');
     background-size: cover;
